# tauri-redis-desktop-manager

./: .eslintrc.cjs  .gitignore  .prettierrc  COMMAND.md  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1728529182360-10f1bb6051c09.mjs
.github/workflows/: eslint.yml
log/: App.tsx  index.html  log.tsx
log/components/Log/: index.tsx
src/: App.css  App.tsx  event.ts  main.tsx  styles.less  type.d.ts
src-tauri/: .env  Cargo.toml  data.db  tauri.conf.json
src-tauri/capabilities/: defaut.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: conn.rs  err.rs  form.rs  key.rs  lib.rs  main.rs  model.rs  pubsub.rs  redis_conn.rs  request.rs  response.rs  sqlite.rs  ssh.rs  state.rs  utils.rs
src-tauri/src/connection/: conn.rs  event.rs  manager.rs  mod.rs  node.rs
src-tauri/src/model/: mod.rs  redis.rs
src-tauri/src/route/: bloom.rs  client.rs  cluster.rs  cms.rs  collection.rs  config.rs  connection.rs  cuckoo.rs  db.rs  debug.rs  hash.rs  hyperloglog.rs  json.rs  key.rs  list.rs  memory.rs  migrate.rs  mod.rs  pubsub.rs  server.rs  set.rs  sqlite.rs  string.rs  tdigest.rs  terminal.rs  timeseries.rs  topk.rs  transfer.rs  zset.rs
src-tauri/src/sqlite/: collection.rs  connection.rs  mod.rs
src/Layout/ActionBar/: index.tsx
src/Layout/Center/: index.tsx
src/Layout/Connections/: index.tsx
src/Layout/Keys/: context.ts  index.tsx  reducer.ts
src/Layout/Left/: index.tsx
src/Layout/Pages/: index.tsx
src/Layout/Right/: index.tsx
src/components/AppLayout/: index.tsx
src/components/ButtonAction/: index.tsx
src/components/Collapse/: index.tsx
src/components/Connection/: index.module.less  index.tsx
src/components/ConnectionForm/: index.tsx
src/components/Container/: index.tsx
src/components/Copy/: index.tsx
src/components/CusButton/: index.tsx
src/components/CusInput/: index.tsx
src/components/CusInputNumber/: index.tsx
src/components/CusModal/: index.tsx
src/components/CusTable/: index.tsx
src/components/DeBug/: index.tsx
src/components/Editable/: index.tsx
src/components/FieldEditor/: index.tsx
src/components/FieldInput/: index.tsx
src/components/FieldView/: index.tsx
src/components/FieldViewer/: Err.tsx  index.tsx
src/components/FormListItem/: index.tsx
src/components/IconButton/: index.tsx
src/components/InputJson/: index.tsx
src/components/InteractiveContainer/: index.tsx
src/components/JsonView/: index.tsx
src/components/KeyContent/: index.tsx
src/components/KeyList/: index.module.less  index.tsx
src/components/Keys/: index.tsx
src/components/Link/: index.tsx
src/components/LoadMore/: index.tsx
src/components/Log/: index.tsx
src/components/ModalForm/: index.tsx  useTrigger.tsx
src/components/ModalQueryForm/: index.tsx
src/components/NewConnection/: index.module.less  index.tsx
src/components/Page/: DetailPage.tsx  index.tsx
src/components/PageContent/: index.tsx
src/components/PageFloatButton/: collect.tsx  index.tsx
src/components/ResizableDiv/: index.tsx
src/components/SearchText/: index.tsx
src/components/Setting/: index.tsx
src/components/Terminal/: Row.tsx  index.tsx
src/components/TitleBar/: index.tsx
src/components/TypeSelect/: index.tsx
src/components/VersionAccess/: index.tsx
src/components/XTerm/: index.tsx
src/consts/: event.ts
src/hooks/: useAppName.ts  useAppVersion.ts  useArrayState.ts  useCaclelInterval.ts  useCommand.tsx  useConnectionOption.ts  useDatabaseOption.tsx  useEventListen.ts  useEventListener.ts  useFieldScan.ts  useHasMultiPage.ts  useKeyScan.ts  useKeyTypes.ts  useOpenWindow.ts  useRequest.ts  useSearchParam.ts  useStore.ts  useTableColumn.ts  useTauriEvent.ts
src/i18n/: index.ts
src/i18n/langs/: zh-CN.json  zh_CN.json
src/store/: collection.ts  connection.ts  db.ts  fieldview.ts  index.ts  key.ts  page.ts  setting.ts  window.ts
src/utils/: index.ts  request.ts  styles.ts
src/windows/database/: App.tsx  index.html  main.tsx
src/windows/debug/: App.tsx  index.html
(+298 files in other folders)
