[package]
name = "tauriredis"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["clipboard-all", "dialog-all", "fs-all", "shell-open", "system-tray", "window-all"] }
tokio-stream = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23.3", features = ["tokio-comp", "cluster-async", "tokio-rustls-comp", "bytes", "json"], git="https://github.com/redis-rs/redis-rs.git" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
dirs-next = "2.0.0"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
once_cell= "*"
futures = "*"
bytes="*"
ssh_jumper="*"
async-trait="*"
rand="*"
chrono="*"
hex="*"
reqwest = { version = "0.11", features = ["json"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
