[package]
name = "tauriredis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.x86_64-apple-darwin.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[dependencies]

tauri = { version = "2", features = ["tray-icon", 'unstable'] }
tokio-stream = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.27.5", features = [
    "tokio-comp",
    "cluster-async",
    "tokio-rustls-comp",
    "bytes",
    "json",
] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
dirs-next = "2.0.0"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
once_cell = "*"
futures = "*"
bytes = "*"
ssh_jumper = "*"
async-trait = "*"
rand = "*"
chrono = "*"
hex = "*"
reqwest = { version = "0.12.8", features = ["json"] }
encoding = "0.2"
tauri-plugin-core = "2.0.0-beta.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-os = "2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
